--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Welcome to My Web Page!</h1>
-    <p>This is a simple welcome page hosted on GitHub and served through Docker!</p>
+    <p>Hello mfkrs !</p>
 </body>
 </html>
