--- a/maintenance1.html
+++ b/maintenance1.html
@@ -53,7 +53,7 @@ font-family: 'Neuton', serif;
 </head>
 <body>
 <div class="holder">
-<img src="logo-2.png" style="width:250px;" />
+<img src="logo.png" style="width:250px;" />
 <h1><span class="tbl">Website is currently under maintenance.</span></h1>
 <p><span class="tbl">We'll be back shortly.</span></p><br>
 <br />
