--- a/maintenance.html
+++ b/maintenance.html
@@ -11,9 +11,9 @@
 </style>
 
 <article>
-    <h1>Nous serons de retour bientôt!</h1>
-    <div>
-      <p>Désolé pour le désagrément, mais nous effectuons actuellement quelques travaux de maintenance. Si vous en avez besoin, vous pouvez toujours <a href="mailto:#">nous contacter</a>, sinon nous serons de retour en ligne sous peu !</p>
-      <p>&mdash; L'équipe informatique</p>
-    </div>
+  <h1>Nous serons de retour bient&ocirc;t !</h1>
+  <div>
+      <p>D&eacute;sol&eacute; pour le d&eacute;sagr&eacute;ment, mais nous effectuons actuellement quelques travaux de maintenance. Si vous en avez besoin, vous pouvez toujours <a href="mailto:#">nous contacter</a>, sinon nous serons de retour en ligne sous peu !</p>
+      <p>&mdash; L&apos;&eacute;quipe</p>
+  </div>
 </article>
