--- a/maintenance.html
+++ b/maintenance.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Site Maintenance</title>
+<title>Site en Maintenance</title>
 <style>
   body { text-align: center; padding: 150px; }
   
@@ -14,6 +14,6 @@
   <h1>Nous serons de retour bient&ocirc;t !</h1>
   <div>
       <p>D&eacute;sol&eacute; pour le d&eacute;sagr&eacute;ment, mais nous effectuons actuellement quelques travaux de maintenance. Si vous en avez besoin, vous pouvez toujours <a href="mailto:#">nous contacter</a>, sinon nous serons de retour en ligne sous peu !</p>
-      <p>&mdash; L&apos;&eacute;quipe</p>
+      <p>&mdash; L&apos;&eacute;quipe Gestimmo</p>
   </div>
 </article>
